feat(workouts): Group exercises into workouts.
[skip ci]

--- a/src/main/resources/templates/exercise.html
+++ b/src/main/resources/templates/exercise.html
@@ -5,16 +5,35 @@
     <title>fragments</title>
 </head>
 <body>
-    <tbody id="exercise-rows" th:fragment="exercise-rows">
+    <section id="workout-section" th:fragment="workout-section">
+        <th:block th:each="workout: ${workouts}">
+        <hgroup>
+            <h1 th:text="${workout.name}">15-minute workout</h1>
+            <p th:text="${workout.description}">Do 50 reps of each move then 40 down to 10.</p>
+        </hgroup>
+        <table>
+            <thead>
+            <tr>
+                <td>Exercise</td>
+                <td>Sets</td>
+                <td colspan="10">Reps</td>
+            </tr>
+            </thead>
+            <tbody th:replace="~{exercise::exercise-rows(exercises=${workout.exercises})}"></tbody>
+        </table>
+        </th:block>
+    </section>
+
+    <tbody id="exercise-rows" th:fragment="exercise-rows(exercises)">
         <tr th:each="exercise: ${exercises}">
             <td th:text="${exercise.name}">Exercise</td>
             <td th:text="${exercise.sets}">0</td>
-            <td th:each="rep: ${exercise.repetitions}">
-                <div th:switch="${rep.state}">
-                    <button th:case="${states.New}" th:text="${rep.value}" class="secondary" hx-post="/repetitionState" hx-trigger="click" hx-target="#exercise-rows" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
-                    <button th:case="${states.Done}" th:text="${rep.value}" class="primary" hx-post="/repetitionState" hx-trigger="click" hx-target="#exercise-rows" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
-                    <button th:case="${states.Skip}" th:text="${rep.value}" class="secondary" disabled hx-post="/repetitionState" hx-trigger="click" hx-target="#exercise-rows" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
-                </div>
+            <td>
+                <th:block th:each="rep: ${exercise.repetitions}" th:switch="${rep.state}">
+                    <button th:case="${states.New}" th:text="${rep.value}" class="secondary" hx-post="/repetitionState" hx-trigger="click" hx-target="#workout-section" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
+                    <button th:case="${states.Done}" th:text="${rep.value}" class="primary" hx-post="/repetitionState" hx-trigger="click" hx-target="#workout-section" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
+                    <button th:case="${states.Skip}" th:text="${rep.value}" class="secondary" disabled hx-post="/repetitionState" hx-trigger="click" hx-target="#workout-section" hx-swap="outerHTML" hx:vals="${ {exerciseId: exercise.id, repetitionId: rep.id } }" >0</button>
+                </th:block>
             </td>
         </tr>
     </tbody>
